--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Street View </title>
+     <script src='scripts/jquery-2.1.3.js' type='text/javascript'> </script>
+    <script src="scripts/drawingboard.js" type='text/javascript'></script>
+  <!--  <script src="scripts/jquery-2.2.1.min.js" type='text/javascript'></script>-->
+    <link rel="stylesheet" href="css/drawingboard.css">
+
     <style>
       html, body {
         height: 100%;
@@ -25,9 +30,16 @@
         line-height: 30px;
         padding-left: 10px;
       }
+      #mural {   
+      position: absolute;
+         width: 600px;
+    height: 450px;
+      top: 0px;
+      display: block;
+      }
       #pano {
         width: 100%;
-        height: 100%;
+        height: 90%;
         float: left;
       }
       #floating-panel {
@@ -40,11 +52,11 @@
         border: 0px solid #999;
       }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv7i_UoYr8jaM0o6dbuCAOdwh5wLUep1k"></script>
+  <!--  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv7i_UoYr8jaM0o6dbuCAOdwh5wLUep1k"></script> -->
   </head>
   <body>
     <div id="pano"></div>
-   <!--  <div id="floating-panel">
+    <div id="floating-panel">
     <table>
       <tr>
         <td><b>Position</b></td><td id="position-cell">&nbsp;</td>
@@ -60,7 +72,7 @@
       </tr>
       <table id="links_table"></table>
     </table>
-    </div> -->
+    </div>
     <script>
       function initPano() {
         var panorama = new google.maps.StreetViewPanorama(
@@ -95,7 +107,6 @@
               linksTable.appendChild(valueCell);
             }
         });
-
         panorama.addListener('position_changed', function() {
             var positionCell = document.getElementById('position-cell');
             positionCell.firstChild.nodeValue = panorama.getPosition() + '';
@@ -108,10 +119,41 @@
             pitchCell.firstChild.nodeValue = panorama.getPov().pitch + '';
         });
       }
+      function start()
+      {
+       var simpleBoard = new DrawingBoard.Board('mural', {
+        background: "rgba(0,0,0,0)",
+        webStorage: true 
+       }); 
+       document.getElementById("showMural").checked = true;
+      }
+
+      function showMuralCh()
+      {
+        var t = document.getElementById("showMural").checked;
+        if(t){
+          $("#mural").fadeIn();
+        }
+        else{
+          $("#mural").fadeOut();
+        } 
+      }
     </script>
+    <div id="loginBar">
+        <div style="float: right;"><a id="loginButton" class="button">Login</a></div>
+        <div style="float: right;"><a id="signUpButton"  class="button" >Sign Up</a></div>
+        <div style="float: left;"><a id="back"  class="button" > Back</a></div>
+        <div style="float: left;"><a id="username" class="button" ></a></div>
+    </div>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv7i_UoYr8jaM0o6dbuCAOdwh5wLUep1k&callback=initPano"
         async defer>
     </script>
+    <body onload='start()'>
+
+    <div id='mural'> </div>
+    <hr>
+    <input type='checkbox' id='showMural' onchange='showMuralCh()'> <label for='showMural'> Draw mode</label>
+
   </body>
 </html>
