--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,23 @@
     <link rel="stylesheet" href="css/offline-language-english.css" type="text/css" />
     <link rel="stylesheet" href="css/drawingboard.css">
 
-    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="icon/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" sizes="57x57" href="img/fav/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/fav/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/fav/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/fav/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/fav/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/fav/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/fav/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/fav/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="img/fav/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/fav/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 
 
     <style>
@@ -88,6 +103,7 @@
         filter: alpha(opacity=60);
 
       }
+	  
       .text {
         padding: 0px;
         background-color: #ffffff;
@@ -298,9 +314,9 @@ var showSignUp = function() {
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv7i_UoYr8jaM0o6dbuCAOdwh5wLUep1k&callback=initPano"
         async defer>
     </script>
-    <body onload='start()' background="img/login.png">>
+    <body onload='start()' style="background-size:contain;" background="img/background.jpg">>
 
-    <div id="loginBar" >
+    <div id="loginBar" background="img/background.jpg">
       <select style="float: left;">
           <option value="volvo">Select a Location...</option>
           <option value="saab">Machu Picchu</option>
@@ -308,8 +324,9 @@ var showSignUp = function() {
           <option value="audi">Mount Rushmore</option>
       </select>
        <input type='checkbox' id='showMural' onchange='showMuralCh()' style="float: left;"> <label for='showMural' style="float: left;" class= "text"> Draw</label>
-        <div style="float: right;"><a id="loginButton"  href="javascript:showLoginModal()" class="text">Login</a></div>
-        <div style="float: right;"><a id="signUpButton"   href="javascript:showSignUp()" class="text" >Sign Up </a></div>
+	   <div style="float: right; padding: 10px"><a href="profile.html" target="_self" class="text">Profile</a></div>
+        <div style="float: right; padding: 10px"><a id="loginButton"  href="javascript:showLoginModal()" class="text">Login</a></div>
+        <div style="float: right; padding: 10px"><a id="signUpButton"   href="javascript:showSignUp()" class="text" >Sign Up </a></div>
         <!--  <div text-align= "center;" display="table-cell;" vertical-align= "middle;" class="text;">Mass Mural</a></div> -->
     </div>
      <h2 text-align= "center;" display="table-cell;" vertical-align= "middle;" class="text;">Mass Mural</h2>
