--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Street View </title>
     
+    <script src='scripts/script.js' type='text/javascript'> </script>
     <script src='scripts/jquery-2.1.3.js' type='text/javascript'> </script>
     <script src="scripts/drawingboard.js" type='text/javascript'></script>
     <script src="scripts/Ply.js"></script>
@@ -19,23 +20,23 @@
     <link rel="stylesheet" href="css/offline-language-english.css" type="text/css" />
     <link rel="stylesheet" href="css/drawingboard.css">
 
-	<link rel="apple-touch-icon" sizes="57x57" href="img/fav/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="img/fav/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="img/fav/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="img/fav/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="img/fav/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="img/fav/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="img/fav/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="img/fav/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="img/fav/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="img/fav/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+  	<link rel="apple-touch-icon" sizes="57x57" href="img/fav/apple-icon-57x57.png">
+  	<link rel="apple-touch-icon" sizes="60x60" href="img/fav/apple-icon-60x60.png">
+  	<link rel="apple-touch-icon" sizes="72x72" href="img/fav/apple-icon-72x72.png">
+  	<link rel="apple-touch-icon" sizes="76x76" href="img/fav/apple-icon-76x76.png">
+  	<link rel="apple-touch-icon" sizes="114x114" href="img/fav/apple-icon-114x114.png">
+  	<link rel="apple-touch-icon" sizes="120x120" href="img/fav/apple-icon-120x120.png">
+  	<link rel="apple-touch-icon" sizes="144x144" href="img/fav/apple-icon-144x144.png">
+  	<link rel="apple-touch-icon" sizes="152x152" href="img/fav/apple-icon-152x152.png">
+  	<link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-icon-180x180.png">
+  	<link rel="icon" type="image/png" sizes="192x192"  href="img/fav/android-icon-192x192.png">
+  	<link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
+  	<link rel="icon" type="image/png" sizes="96x96" href="img/fav/favicon-96x96.png">
+  	<link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
+  	<link rel="manifest" href="/manifest.json">
+  	<meta name="msapplication-TileColor" content="#ffffff">
+  	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  	<meta name="theme-color" content="#ffffff">
 
 
     <style>
@@ -309,12 +310,28 @@ var showSignUp = function() {
      //Pressed cancel
     });
 }
+      function GetLatLong()
+      {
+        var geocoder = new google.maps.Geocoder();
+        var address = "699 South Mill Avenue Tempe, AZ 85281"//document.getElementById('textboxid').value;
+
+        geocoder.geocode({ 'address': address }, function (results, status) {
+
+            if (status == google.maps.GeocoderStatus.OK) {
+                var latitude = results[0].geometry.location.lat();
+                var longitude = results[0].geometry.location.lng();
+
+            }
+            console.log(latitude);
+            console.log(longitude);
+        });
+      }
     </script>
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv7i_UoYr8jaM0o6dbuCAOdwh5wLUep1k&callback=initPano"
         async defer>
     </script>
-    <body onload='start()' style="background-size:contain;" background="img/background.jpg">>
+    <body onload='GetLatLong()' style="background-size:contain;" background="img/background.jpg">
 
     <div id="loginBar" background="img/background.jpg">
       <select style="float: left;">
