--- a/public/profile.html
+++ b/public/profile.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mass Mural</title>
     
+     <script src='scripts/script.js' type='text/javascript'> </script>
     <script src='scripts/jquery-2.1.3.js' type='text/javascript'> </script>
     <script src="scripts/drawingboard.js" type='text/javascript'></script>
     <script src="scripts/Ply.js"></script>
@@ -127,8 +128,8 @@
 	  #myCanvas
 	  {
 	  	position: absolute;
-	  	left: 50%;
-	  	top: 40%;
+	    left: 50%;
+      top: 40%;
 	  	margin-right: -50%;
 	  	transform: translate(-50%, -50%);
 	  	border:1px solid #000000;
@@ -140,7 +141,55 @@
     
     </script>
     <script>
-	function start(){}
+	function start(){loadPics(); panorama.setVisible(true);}
+   var user = "";
+   var latitude = -33.732; 
+   var longitude = 150.312; 
+   var heading = 270; 
+   var pitch = 0; 
+   var panoID = 0; 
+    var panorama;
+
+// heading:"26.859838573757504"
+// id: " q8L4NFDumyPQba7qAMUxgg"
+// lat:"-33.7316512"
+// long:"150.31193329999996"
+// pitch:"-0.5586640578842195"
+// user:"moo"
+  function loadPics() {
+        var url = "./getPictures?user=eee"; 
+        loadURL(url, function(data){
+          var myPics = JSON.parse(data);
+           console.log(myPics);
+           console.log("PanoID: " + myPics[0].id);
+           console.log("lat: " + myPics[0].lat);
+           console.log("long: " + myPics[0].long);
+           console.log("heading: " + myPics[0].heading);
+           console.log("pitch: " + myPics[0].pitch);
+
+            user = "moo";
+            latitude = myPics[0].lat; 
+            longitude = myPics[0].long; 
+            heading = myPics[0].heading; 
+            pitch = myPics[0].pitch; 
+            panoID = myPics[0].id; 
+        }); 
+    }
+      function initPano() {
+        panorama = new google.maps.StreetViewPanorama(
+            document.getElementById('pano'), {
+              position: {lat: latitude, lng: longitude},
+              pov: {
+                heading: heading,
+                pitch: pitch
+              },
+              visible: true
+        });
+      }
+    </script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv7i_UoYr8jaM0o6dbuCAOdwh5wLUep1k&callback=initPano"
+        async defer>
     </script>
     <body onload='start()' style="background-size:contain; background-repeat: no-repeat; background-position: center; " background="img/map.jpg">
 
